[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/game_menu.gd" type="Script" id=1]
[ext_resource path="res://sprites/window.png" type="Texture" id=2]
[ext_resource path="res://sprites/textButtonUP.png" type="Texture" id=3]
[ext_resource path="res://sprites/textButtonDOWN.png" type="Texture" id=4]
[ext_resource path="res://fonts/dos.fnt" type="BitmapFont" id=5]

[node name="game_menu" type="Control"]

process/pause_mode = 2
rect/scale = Vector2( 0.75, 0.75 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="TextureFrame" type="TextureFrame" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -223.0
margin/top = 25.0
margin/right = -735.0
margin/bottom = 612.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="TextureButton_menu" type="TextureButton" parent="."]

anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 1.5, 0.75 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -281.0
margin/top = 114.0
margin/right = -537.0
margin/bottom = 242.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )

[node name="TextureButton_sound" type="TextureButton" parent="."]

anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 1.5, 0.75 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -284.0
margin/top = 266.0
margin/right = -540.0
margin/bottom = 394.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )

[node name="TextureButton_return" type="TextureButton" parent="."]

anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 1.5, 0.75 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -288.0
margin/top = 412.0
margin/right = -544.0
margin/bottom = 540.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )

[node name="Label2" type="Label" parent="."]

anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -276.0
margin/top = 402.0
margin/right = -1110.0
margin/bottom = 628.0
custom_fonts/font = ExtResource( 5 )
text = "Back to game"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="."]

anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -421.0
margin/top = 139.0
margin/right = -638.0
margin/bottom = 229.0
custom_fonts/font = ExtResource( 5 )
text = "Exit"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_sound" type="Label" parent="."]

anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -366.0
margin/top = 288.0
margin/right = -852.0
margin/bottom = 378.0
custom_fonts/font = ExtResource( 5 )
text = "Sound OFF"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="TextureButton_menu" to="." method="_on_TextureButton_menu_pressed"]

[connection signal="pressed" from="TextureButton_sound" to="." method="_on_TextureButton_sound_pressed"]

[connection signal="pressed" from="TextureButton_return" to="." method="_on_TextureButton_return_pressed"]


